db 연결 추가